# libdyson-rest

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  MANIFEST.in  PROJECT_CLEANUP.md  PUBLISHING.md  README.md  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  test_debug_logging.py  test_endpoint_connectivity.py
.github/: AUTOMATED_RELEASE_SETUP.md  BRANCH_PROTECTION.md  GITHUB_APP_SETUP.md  RENOVATE_CONFIGURATION.md  RENOVATE_SETUP.md  WORKFLOW_TEST.md  copilot-instructions.md  renovate.json
.github/scripts/: README.md  publish_to_pypi.py  update_version.py
.github/workflows/: README.md  auto-release-alpha.yml  auto-release-beta.yml  auto-release-rc.yml  auto-release-stable.yml  build-test.yml  ci.yml  dependency-updates.yml  manual-release-stable.yml  pre-commit.yml  publish-to-pypi.yml  quality-checks.yml  release.yml  renovate-post-update.yml  renovate.yml  security-scan.yml  version-sync-check.yml
docs/: API.md  MOBILE_AUTHENTICATION.md  MOBILE_AUTH_QUICKREF.md  MODERN_TYPE_HINTS.md  STRICT_TYPE_CHECKING.md  mydyson_openapi.yaml
examples/: README.md  TROUBLESHOOTING.md  analyze_mqtt_info.py  api_mock_devices_response.json  async_mobile_auth_example.py  async_troubleshoot_account.py  async_usage_example.py  dyson_api_device_scan.py  example_token_usage.py  firmware_check.py  home_assistant_usage.py  mobile_auth_example.py  test_debug_logging.py  test_real_auth.py  troubleshoot_account.py  usage_example.py  usage_example_clean.py
scripts/: README.md  sync_versions.py  update_version.py  validate_implementation.py  verify_type_checking.py
src/libdyson_rest/: __init__.py  async_client.py  client.py  exceptions.py  types.py  validation.py
src/libdyson_rest/models/: __init__.py  auth.py  device.py  environment.py  iot.py  robot.py
src/libdyson_rest/utils/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py  test_async_client_integration.py  test_client_integration.py
tests/unit/: test_async_client.py  test_async_coverage_gaps.py  test_client.py  test_device_endpoints_new.py  test_environment_endpoints.py  test_environment_models.py  test_exceptions.py  test_iot.py  test_models.py  test_robot_endpoints.py  test_robot_endpoints_new.py  test_robot_models.py  test_utils.py  test_validation.py
